--- a/src/app/routed-view/routed-view.template.html
+++ b/src/app/routed-view/routed-view.template.html
@@ -1,2 +1,4 @@
 <h1>Hey! I`am angular10 rendered view</h1>
+<a [routerLink]="'/feature-1'">Go feature 1</a>
+<a [routerLink]="'/feature-2'">Go feature 2</a>
 <router-outlet></router-outlet>
