add standalone navigation and change texts

--- a/src/app/feature-2/components/test-component/test-component.component.html
+++ b/src/app/feature-2/components/test-component/test-component.component.html
@@ -1,4 +1,4 @@
-<p>test-component from feature-2 works!</p>
+<p>Hey, I`m Angular 10 routed component. Moreover, I`m loaded lazily</p>
 <button type="button" (click)="goAngularJs()">Navigate back to angular.js from Angular 10</button>
 <a [routerLink]="['nested']">Go Nested route</a>
 <router-outlet></router-outlet>
