use rollup for ajs bundling and dynamic imports (ajs lazy loading)

--- a/src/ajs/components/navigation.component.html
+++ b/src/ajs/components/navigation.component.html
@@ -14,5 +14,8 @@
     <li>
       <a ui-sref="ajs">UI Router state link</a>
     </li>
+    <li>
+      <a href="#/ajs-lazy-feature">Lazy loaded angular.js link</a>
+    </li>
   </ul>
 </div>
