fixed lazy loaded ajs component bindings

--- a/src/ajs/lazy/components/lazy-feature.component.html
+++ b/src/ajs/lazy/components/lazy-feature.component.html
@@ -1,4 +1,4 @@
 <div>
-  <h1>Hey, I'm lazy-loaded angular.js component</h1>
-  <button type="button" ng-click="sayHi()">Click me!</button>
+  <h1>Hey, I'm lazy-loaded angular.js component ({{$ctrl.wow}})</h1>
+  <button type="button" ng-click="$ctrl.sayHi()">Click me!</button>
 </div>
